Fixed floating bug in maintainer social icons overlapping with h2 in chrome

--- a/html/static/cpan-map.css
+++ b/html/static/cpan-map.css
@@ -662,6 +662,7 @@ div#intro p.note {
   font-size: 125%;
   color: #555555;
   margin: 0.8em 0 0.2em;
+  clear: left;
 }
 
 .cpan-map div.map-info-panel .info li {
